✨ feat: 新增配置服务相关接口
