# docs/swagger.yaml
@@ -27,9 +27,70 @@ definitions:
       message:
         type: string
     type: object
+  controller.LoadResponse:
+    properties:
+      code:
+        type: integer
+      collectThresholds:
+        additionalProperties:
+          type: number
+        type: object
+      expireDelay:
+        type: integer
+      expireTime:
+        type: integer
+      message:
+        type: string
+      mnemonic:
+        type: string
+      walletMaxNumber:
+        type: integer
+    type: object
+  controller.SetRequest:
+    properties:
+      collectThresholds:
+        additionalProperties:
+          type: number
+        type: object
+      expireDelay:
+        type: integer
+      expireTime:
+        type: integer
+      mnemonic:
+        type: string
+      walletMaxNumber:
+        type: integer
+    type: object
 info:
   contact: {}
 paths:
+  /v1/config/load:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/controller.LoadResponse'
+      summary: 加载配置
+  /v1/config/set:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: ' '
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/controller.SetRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+      summary: 修改配置
   /v1/funds/getRechargeRecords:
     get:
       parameters:
